# tetroid

./: CMakeLists.txt  README.md  taskfile.yml  windows-toolchain.cmake
src/: Board.cpp  Board.h  Constants.h  Game.cpp  Game.h  Piece.cpp  Piece.h  Pieces.h  main.cpp
